--- a/LeBi/src/com/lebi/view/Login.fxml
+++ b/LeBi/src/com/lebi/view/Login.fxml
@@ -10,15 +10,15 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.LoginController">
    <center>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="352.0" prefWidth="598.0">
                <children>
-                  <TextField layoutX="216.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" />
-                  <TextField layoutX="216.0" layoutY="217.0" prefHeight="40.0" prefWidth="220.0" />
-                  <Button layoutX="216.0" layoutY="307.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" text="Logar" />
+                  <TextField id="txLogin" fx:id="txLogin" layoutX="216.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" />
+                  <TextField id="txSenha" fx:id="txSenha" layoutX="216.0" layoutY="217.0" prefHeight="40.0" prefWidth="220.0" />
+                  <Button id="btLogar" fx:id="btLogar" layoutX="216.0" layoutY="307.0" mnemonicParsing="false" onAction="#logar" prefHeight="40.0" prefWidth="220.0" text="Logar" />
                   <ImageView fitHeight="96.0" fitWidth="600.0" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
                      <image>
                         <Image url="@../../../../img/logo_size_invert.jpg" />
@@ -43,7 +43,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button layoutX="341.0" layoutY="12.0" mnemonicParsing="false" text="Cadastrar">
+                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="341.0" layoutY="12.0" mnemonicParsing="false" text="Cadastrar">
                      <font>
                         <Font size="13.0" />
                      </font>
