--- a/LeBi/src/com/lebi/view/CadastroPaciente.fxml
+++ b/LeBi/src/com/lebi/view/CadastroPaciente.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.CadastroPacienteController">
    <children>
       <Label layoutX="131.0" layoutY="74.0" text="Nome:" />
       <Label layoutX="134.0" layoutY="254.0" text="Endereco:" />
@@ -17,14 +16,14 @@
       <Label layoutX="135.0" layoutY="312.0" text="Telefone:" />
       <Label layoutX="137.0" layoutY="190.0" text="CPF:" />
       <Label layoutX="132.0" layoutY="473.0" text="Senha:" />
-      <TextField layoutX="131.0" layoutY="91.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="131.0" layoutY="149.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="131.0" layoutY="207.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="131.0" layoutY="270.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="131.0" layoutY="328.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="132.0" layoutY="430.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField layoutX="132.0" layoutY="490.0" prefHeight="34.0" prefWidth="340.0" />
-      <Button layoutX="131.0" layoutY="563.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="340.0" text="Cadastrar" />
+      <TextField fx:id="txNome" layoutX="131.0" layoutY="91.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txDataNascimento" layoutX="131.0" layoutY="149.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txCpf" layoutX="131.0" layoutY="207.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txEndereco" layoutX="131.0" layoutY="270.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txTelefone" layoutX="131.0" layoutY="328.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txEmail" layoutX="132.0" layoutY="430.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txSenha" layoutX="132.0" layoutY="490.0" prefHeight="34.0" prefWidth="340.0" />
+      <Button fx:id="btCadastrar" layoutX="131.0" layoutY="563.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="34.0" prefWidth="340.0" text="Cadastrar" />
       <Separator layoutX="1.0" layoutY="383.0" prefHeight="8.0" prefWidth="601.0" />
       <Label layoutX="215.0" layoutY="21.0" text="Faça seu cadastro">
          <font>
