--- a/LeBi/src/com/lebi/view/Login.fxml
+++ b/LeBi/src/com/lebi/view/Login.fxml
@@ -43,7 +43,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="341.0" layoutY="12.0" mnemonicParsing="false" text="Cadastrar">
+                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="341.0" layoutY="12.0" mnemonicParsing="false" onAction="#cadastrarPaciente" text="Cadastrar">
                      <font>
                         <Font size="13.0" />
                      </font>
