--- a/LeBi/bin/com/lebi/view/CadastroPaciente.fxml
+++ b/LeBi/bin/com/lebi/view/CadastroPaciente.fxml
@@ -10,14 +10,14 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.CadastroPacienteController">
    <children>
       <Label layoutX="131.0" layoutY="74.0" text="Nome:" />
-      <Label layoutX="134.0" layoutY="254.0" text="Endereco:" />
-      <Label layoutX="133.0" layoutY="135.0" text="Data de Nascimento:" />
+      <Label layoutX="131.0" layoutY="254.0" text="Endereco:" />
+      <Label layoutX="131.0" layoutY="135.0" text="Data de Nascimento:" />
       <Label layoutX="132.0" layoutY="413.0" text="E-mail:" />
-      <Label layoutX="135.0" layoutY="312.0" text="Telefone:" />
-      <Label layoutX="137.0" layoutY="190.0" text="CPF:" />
+      <Label layoutX="131.0" layoutY="312.0" text="Telefone:" />
+      <Label layoutX="131.0" layoutY="190.0" text="CPF:" />
       <Label layoutX="132.0" layoutY="473.0" text="Senha:" />
       <TextField fx:id="txNome" layoutX="131.0" layoutY="91.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txDataNascimento" layoutX="131.0" layoutY="149.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txDataNascimento" layoutX="131.0" layoutY="151.0" prefHeight="34.0" prefWidth="340.0" />
       <TextField fx:id="txCpf" layoutX="131.0" layoutY="207.0" prefHeight="34.0" prefWidth="340.0" />
       <TextField fx:id="txEndereco" layoutX="131.0" layoutY="270.0" prefHeight="34.0" prefWidth="340.0" />
       <TextField fx:id="txTelefone" layoutX="131.0" layoutY="328.0" prefHeight="34.0" prefWidth="340.0" />
@@ -30,5 +30,10 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Button id="btCadastrar" fx:id="btVoltar" layoutX="11.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarLogin" prefHeight="27.0" prefWidth="81.0" text="Voltar">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
