--- a/LeBi/bin/com/lebi/view/Login.fxml
+++ b/LeBi/bin/com/lebi/view/Login.fxml
@@ -14,36 +14,41 @@
    <center>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="352.0" prefWidth="598.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="380.0" prefWidth="599.0">
                <children>
-                  <TextField id="txLogin" fx:id="txLogin" layoutX="216.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" />
-                  <TextField id="txSenha" fx:id="txSenha" layoutX="216.0" layoutY="217.0" prefHeight="40.0" prefWidth="220.0" />
-                  <Button id="btLogar" fx:id="btLogar" layoutX="216.0" layoutY="307.0" mnemonicParsing="false" onAction="#logar" prefHeight="40.0" prefWidth="220.0" text="Logar" />
+                  <TextField id="txLogin" fx:id="txLogin" layoutX="201.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" />
+                  <TextField id="txSenha" fx:id="txSenha" layoutX="201.0" layoutY="217.0" prefHeight="40.0" prefWidth="220.0" />
+                  <Button id="btLogar" fx:id="btLogar" layoutX="201.0" layoutY="307.0" mnemonicParsing="false" onAction="#logar" prefHeight="40.0" prefWidth="220.0" text="Logar" />
                   <ImageView fitHeight="96.0" fitWidth="600.0" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
                      <image>
                         <Image url="@../../../../img/logo_size_invert.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="29.0" fitWidth="32.0" layoutX="168.0" layoutY="223.0">
+                  <ImageView fitHeight="29.0" fitWidth="32.0" layoutX="153.0" layoutY="223.0">
                      <image>
                         <Image url="@../../../../img/padlock.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="28.0" fitWidth="29.0" layoutX="169.0" layoutY="163.0">
+                  <ImageView fitHeight="28.0" fitWidth="29.0" layoutX="154.0" layoutY="163.0">
                      <image>
                         <Image url="@../../../../img/user.png" />
                      </image>
                   </ImageView>
+                  <Button id="btCadastrar" fx:id="btSair" layoutX="503.0" layoutY="400.0" mnemonicParsing="false" onAction="#sairSistema" prefHeight="27.0" prefWidth="81.0" text="Sair">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
           <AnchorPane maxHeight="50.0" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0">
                <children>
-                  <Label layoutX="174.0" layoutY="13.0" text="Não possuí cadastro?">
+                  <Label layoutX="183.0" layoutY="12.0" text="Não possui cadastro?">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="341.0" layoutY="12.0" mnemonicParsing="false" onAction="#cadastrarPaciente" text="Cadastrar">
+                  <Button id="btCadastrar" fx:id="btCadastrar" layoutX="350.0" layoutY="11.0" mnemonicParsing="false" onAction="#cadastrarPaciente" text="Cadastrar">
                      <font>
                         <Font size="13.0" />
                      </font>
