--- a/LeBi/src/com/lebi/view/Paciente.fxml
+++ b/LeBi/src/com/lebi/view/Paciente.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -8,9 +9,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
    <children>
-      <TableView fx:id="tbConsultas" layoutX="101.0" layoutY="83.0" prefHeight="229.0" prefWidth="399.0">
+      <TableView fx:id="tbConsultas" layoutX="101.0" layoutY="85.0" prefHeight="229.0" prefWidth="399.0">
         <columns>
           <TableColumn prefWidth="105.0" text="Especialista" />
           <TableColumn prefWidth="134.0" text="Médico" />
@@ -18,17 +19,17 @@
             <TableColumn prefWidth="81.0" text="Horário" />
         </columns>
       </TableView>
-      <Label layoutX="180.0" layoutY="14.0" text="Minhas Consultas">
+      <Label layoutX="180.0" layoutY="18.0" text="Minhas Consultas">
          <font>
             <Font size="31.0" />
          </font>
       </Label>
-      <Label layoutX="56.0" layoutY="337.0" text="Agendar:">
+      <Label layoutX="420.0" layoutY="4.0" text="Agendar:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <MenuButton fx:id="mbEspecialidade" layoutX="128.0" layoutY="335.0" mnemonicParsing="false" onMouseClicked="#escolherEspecialidade" text="Especialidade">
+      <MenuButton fx:id="mbEspecialidade" layoutX="492.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#escolherEspecialidade" text="Especialidade">
         <items>
           <MenuItem mnemonicParsing="false" text="cardiologia" />
           <MenuItem mnemonicParsing="false" text="clinico geral" />
@@ -45,5 +46,16 @@
             <MenuItem mnemonicParsing="false" text="pneumologia" />
         </items>
       </MenuButton>
+      <Label layoutX="108.0" layoutY="335.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Button id="btLogar" fx:id="btAgendar" layoutX="190.0" layoutY="371.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="220.0" text="Agendar" />
+      <Button id="btCadastrar" fx:id="btVoltar" layoutX="12.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarLogin" prefHeight="27.0" prefWidth="81.0" text="Voltar">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
