--- a/LeBi/bin/com/lebi/view/Login.fxml
+++ b/LeBi/bin/com/lebi/view/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -16,8 +17,8 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="380.0" prefWidth="599.0">
                <children>
-                  <TextField id="txLogin" fx:id="txLogin" layoutX="201.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" />
-                  <TextField id="txSenha" fx:id="txSenha" layoutX="201.0" layoutY="217.0" prefHeight="40.0" prefWidth="220.0" />
+                  <TextField id="txLogin" fx:id="txLogin" layoutX="201.0" layoutY="157.0" prefHeight="40.0" prefWidth="220.0" promptText="Digite seu usuário" />
+                  <PasswordField id="txSenha" fx:id="txSenha" layoutX="201.0" layoutY="218.0" prefHeight="39.0" prefWidth="219.0" promptText="Digite sua senha" />
                   <Button id="btLogar" fx:id="btLogar" layoutX="201.0" layoutY="307.0" mnemonicParsing="false" onAction="#logar" prefHeight="40.0" prefWidth="220.0" text="Logar" />
                   <ImageView fitHeight="96.0" fitWidth="600.0" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
                      <image>
