--- a/LeBi/src/com/lebi/view/AgendaEspecialista.fxml
+++ b/LeBi/src/com/lebi/view/AgendaEspecialista.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -20,5 +21,10 @@
             <Font size="25.0" />
          </font>
       </Label>
+      <Button id="btVoltar" fx:id="btVoltar" layoutX="11.0" layoutY="11.0" mnemonicParsing="false" onMouseClicked="#voltarPaciente" prefHeight="27.0" prefWidth="81.0" text="Voltar">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
