--- a/LeBi/bin/com/lebi/view/AgendaEspecialista.fxml
+++ b/LeBi/bin/com/lebi/view/AgendaEspecialista.fxml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="652.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.AgendaEspecialistaController">
+<Pane fx:id="cbEspecialidade" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="684.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.AgendaEspecialistaController">
    <children>
-      <TableView fx:id="tbAgendaEspecialista" layoutX="124.0" layoutY="100.0" prefHeight="302.0" prefWidth="404.0">
+      <TableView fx:id="tbAgendaEspecialista" layoutX="25.0" layoutY="92.0" onMouseClicked="#tbAgendaEspecialistaClicked" prefHeight="302.0" prefWidth="459.0">
         <columns>
-          <TableColumn prefWidth="168.0" text="Médico" />
-          <TableColumn minWidth="0.0" prefWidth="149.0" text="Dia" />
-            <TableColumn prefWidth="87.0" text="Horário" />
+            <TableColumn id="clMedico" fx:id="clEspecialidade" maxWidth="120.0" prefWidth="120.0" text="Especialidade" />
+          <TableColumn id="clMedico" maxWidth="167.0" prefWidth="167.0" text="Médico" />
+          <TableColumn id="clDia" maxWidth="106.0" minWidth="0.0" prefWidth="106.0" text="Dia" />
+            <TableColumn id="clHorario" maxWidth="64.0" prefWidth="64.0" text="Horário" />
         </columns>
       </TableView>
       <Label layoutX="188.0" layoutY="30.0" text="Faça o seu agendamento">
@@ -26,5 +29,11 @@
             <Font size="13.0" />
          </font>
       </Button>
+      <ComboBox fx:id="cbEspecialidade" layoutX="513.0" layoutY="92.0" prefWidth="150.0" promptText="Especialidade" />
+      <TextField fx:id="txMedico" disable="true" layoutX="514.0" layoutY="197.0" />
+      <TextField fx:id="txDia" disable="true" layoutX="514.0" layoutY="231.0" />
+      <TextField fx:id="txHorario" disable="true" layoutX="514.0" layoutY="266.0" />
+      <TextField fx:id="txEspecialidade" disable="true" layoutX="514.0" layoutY="158.0" />
+      <Button fx:id="btAgendar" layoutX="562.0" layoutY="337.0" mnemonicParsing="false" text="Agendar" />
    </children>
 </Pane>
