--- a/LeBi/src/com/lebi/view/AgendaEspecialista.fxml
+++ b/LeBi/src/com/lebi/view/AgendaEspecialista.fxml
@@ -29,11 +29,12 @@
             <Font size="13.0" />
          </font>
       </Button>
-      <ComboBox fx:id="cbEspecialidade" layoutX="513.0" layoutY="92.0" prefWidth="150.0" promptText="Especialidade" />
-      <TextField fx:id="txMedico" disable="true" layoutX="514.0" layoutY="197.0" />
-      <TextField fx:id="txDia" disable="true" layoutX="514.0" layoutY="231.0" />
-      <TextField fx:id="txHorario" disable="true" layoutX="514.0" layoutY="266.0" />
-      <TextField fx:id="txEspecialidade" disable="true" layoutX="514.0" layoutY="158.0" />
-      <Button fx:id="btAgendar" layoutX="562.0" layoutY="337.0" mnemonicParsing="false" text="Agendar" />
+      <ComboBox fx:id="cbEspecialidade" layoutX="512.0" layoutY="92.0" prefWidth="150.0" promptText="Especialidade" />
+      <TextField fx:id="txMedico" disable="true" layoutX="513.0" layoutY="203.0" />
+      <TextField fx:id="txDia" disable="true" layoutX="513.0" layoutY="237.0" />
+      <TextField fx:id="txHorario" disable="true" layoutX="513.0" layoutY="270.0" />
+      <TextField fx:id="txEspecialidade" disable="true" layoutX="513.0" layoutY="171.0" />
+      <Button fx:id="btAgendar" layoutX="557.0" layoutY="344.0" mnemonicParsing="false" onMouseClicked="#cadastrarConsulta" text="Agendar" />
+      <TextField fx:id="txUser" disable="true" layoutX="514.0" layoutY="26.0" />
    </children>
 </Pane>
