--- a/LeBi/src/com/lebi/view/Paciente.fxml
+++ b/LeBi/src/com/lebi/view/Paciente.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
    <children>
-      <TableView fx:id="tbConsultas" layoutX="101.0" layoutY="85.0" prefHeight="229.0" prefWidth="399.0">
+      <TableView fx:id="tbConsultas" layoutX="32.0" layoutY="138.0" prefHeight="229.0" prefWidth="399.0">
         <columns>
           <TableColumn fx:id="clEspecialidade" prefWidth="105.0" text="Especialista" />
           <TableColumn fx:id="clMedico" prefWidth="134.0" text="Médico" />
@@ -18,28 +18,29 @@
             <TableColumn fx:id="clHorario" prefWidth="81.0" text="Horário" />
         </columns>
       </TableView>
-      <Label layoutX="180.0" layoutY="18.0" text="Minhas Consultas">
+      <Label layoutX="178.0" layoutY="16.0" text="Minhas Consultas">
          <font>
             <Font size="31.0" />
          </font>
       </Label>
-      <Label layoutX="108.0" layoutY="340.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Button id="btAgendar" fx:id="btAgendar" layoutX="190.0" layoutY="372.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="220.0" text="Agendar" />
-      <Button id="btVoltar" fx:id="btVoltar" layoutX="12.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarMain" prefHeight="27.0" prefWidth="81.0" text="Voltar">
+      <Button id="btAgendar" fx:id="btAgendar" layoutX="101.0" layoutY="460.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="261.0" text="Agendar" />
+      <Button id="btVoltar" fx:id="btVoltar" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarMain" prefHeight="27.0" prefWidth="81.0" text="Voltar">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <TextField fx:id="txUser" disable="true" layoutX="456.0" layoutY="13.0" prefHeight="21.0" prefWidth="130.0" />
-      <Button layoutX="189.0" layoutY="470.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" text="Desmarcar" />
-      <Label layoutX="53.0" layoutY="437.0" text="Para desmarcar uma consulta, selecione na tabela e clique no botão abaixo:">
+      <TextField fx:id="txUser" disable="true" editable="false" layoutX="468.0" layoutY="13.0" prefHeight="21.0" prefWidth="130.0" />
+      <Button fx:id="btDesmarcar" layoutX="458.0" layoutY="327.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="149.0" text="Desmarcar" />
+      <Label layoutX="44.0" layoutY="414.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
+      <TextField fx:id="txEspecialista" disable="true" editable="false" layoutX="454.0" layoutY="138.0" />
+      <TextField fx:id="txMedico" disable="true" editable="false" layoutX="454.0" layoutY="171.0" />
+      <TextField fx:id="txDia" disable="true" editable="false" layoutX="454.0" layoutY="205.0" />
+      <TextField fx:id="txHorario" disable="true" editable="false" layoutX="454.0" layoutY="240.0" />
+      <Label layoutX="463.0" layoutY="284.0" text="Selecione a consulta que" />
+      <Label layoutX="483.0" layoutY="301.0" text="deseja desmarcar" />
    </children>
 </Pane>
