deletando consulta paciente
deletando consulta no banco e tableview

--- a/LeBi/bin/com/lebi/view/Paciente.fxml
+++ b/LeBi/bin/com/lebi/view/Paciente.fxml
@@ -10,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
    <children>
-      <TableView fx:id="tbConsultas" layoutX="32.0" layoutY="138.0" prefHeight="229.0" prefWidth="399.0">
+      <TableView fx:id="tbConsultas" layoutX="32.0" layoutY="138.0" onMouseClicked="#tbPacienteExcluirClicked" prefHeight="229.0" prefWidth="399.0">
         <columns>
           <TableColumn fx:id="clEspecialidade" prefWidth="105.0" text="Especialista" />
           <TableColumn fx:id="clMedico" prefWidth="134.0" text="Médico" />
@@ -30,8 +30,8 @@
          </font>
       </Button>
       <TextField fx:id="txUser" disable="true" editable="false" layoutX="468.0" layoutY="13.0" prefHeight="21.0" prefWidth="130.0" />
-      <Button fx:id="btDesmarcar" layoutX="458.0" layoutY="327.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="149.0" text="Desmarcar" />
-      <Label layoutX="44.0" layoutY="414.0" text="Para agendar uma nova consulta, clique no botão abaixo">
+      <Button fx:id="btDesmarcar" layoutX="458.0" layoutY="327.0" mnemonicParsing="false" onMouseClicked="#excluirConsulta" prefHeight="40.0" prefWidth="149.0" text="Desmarcar" />
+      <Label layoutX="44.0" layoutY="414.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
          <font>
             <Font size="15.0" />
          </font>
