[FIX] - Realizando testes na aplicação inteira e alterando o que precisa

--- a/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
@@ -5,19 +5,19 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="549.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.lebiton.controller.HomeAdmController">
+<Pane prefHeight="629.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.lebiton.controller.HomeAdmController">
    <children>
       <Label layoutX="180.0" layoutY="40.0" text="ÁREA DO ADMINISTRADOR">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button fx:id="btCadastrar" layoutX="127.0" layoutY="125.0" mnemonicParsing="false" onAction="#cadastrarMedico" prefHeight="44.0" prefWidth="376.0" text="Cadastro de médico">
+      <Button fx:id="btCadastrar" layoutX="127.0" layoutY="136.0" mnemonicParsing="false" onAction="#cadastrarMedico" prefHeight="44.0" prefWidth="376.0" text="Cadastro de médico">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btCadastroDias" layoutX="127.0" layoutY="195.0" mnemonicParsing="false" onAction="#cadastrarDiasAgenda" prefHeight="44.0" prefWidth="376.0" text="Cadastro de dias na agenda">
+      <Button fx:id="btCadastroDias" layoutX="127.0" layoutY="201.0" mnemonicParsing="false" onAction="#cadastrarDiasAgenda" prefHeight="44.0" prefWidth="376.0" text="Cadastro de dias na agenda">
          <font>
             <Font size="15.0" />
          </font>
@@ -27,25 +27,35 @@
             <Font size="13.0" />
          </font>
       </Button>
-      <Button fx:id="btAgendaMedico" layoutX="127.0" layoutY="266.0" mnemonicParsing="false" onAction="#cadastrarAgendaMedico" prefHeight="44.0" prefWidth="376.0" text="Cadastro agenda do médico">
+      <Button fx:id="btAgendaMedico" layoutX="127.0" layoutY="269.0" mnemonicParsing="false" onAction="#cadastrarAgendaMedico" prefHeight="44.0" prefWidth="376.0" text="Cadastro agenda do médico">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btVisualizarUser" layoutX="127.0" layoutY="333.0" mnemonicParsing="false" onAction="#visualizarUsuarios" prefHeight="44.0" prefWidth="376.0" text="Exibir Usuários">
+      <Button fx:id="btVisualizarUser" layoutX="127.0" layoutY="408.0" mnemonicParsing="false" onAction="#visualizarUsuarios" prefHeight="44.0" prefWidth="376.0" text="Exibir Usuários">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btConsultas" layoutX="127.0" layoutY="397.0" mnemonicParsing="false" onAction="#visualizarConsultas" prefHeight="44.0" prefWidth="376.0" text="Exibir Consultas">
+      <Button fx:id="btConsultas" layoutX="127.0" layoutY="470.0" mnemonicParsing="false" onAction="#visualizarConsultas" prefHeight="44.0" prefWidth="376.0" text="Exibir Consultas">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btVisualizarAgenda" layoutX="127.0" layoutY="458.0" mnemonicParsing="false" onAction="#vizualizarAgendas" prefHeight="44.0" prefWidth="376.0" text="Exibir Agendas">
+      <Button fx:id="btVisualizarAgenda" layoutX="127.0" layoutY="533.0" mnemonicParsing="false" onAction="#vizualizarAgendas" prefHeight="44.0" prefWidth="376.0" text="Exibir Agendas">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
+      <Label layoutX="262.0" layoutY="106.0" text="Cadastros:">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="262.0" layoutY="373.0" prefHeight="26.0" prefWidth="113.0" text="Visualizações:" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
