--- a/lebiton/src/main/resources/com/project/lebiton/view/Medico.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/Medico.fxml
@@ -10,23 +10,28 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.lebiton.controller.MedicoController">
    <children>
-      <TableView fx:id="tbHorarios" editable="true" layoutX="224.0" layoutY="97.0" prefHeight="283.0" prefWidth="216.0">
+      <TableView fx:id="tbHorarios" editable="true" layoutX="224.0" layoutY="129.0" prefHeight="283.0" prefWidth="216.0">
         <columns>
           <TableColumn fx:id="clDia" prefWidth="122.0" text="Dia" />
           <TableColumn fx:id="clHorario" prefWidth="91.0" text="Horário" />
         </columns>
       </TableView>
-      <Label layoutX="245.0" layoutY="19.0" text="Bem vindo">
+      <Label layoutX="219.0" layoutY="20.0" text="Bem vindo(a)!" textAlignment="CENTER">
          <font>
             <Font size="37.0" />
          </font>
       </Label>
       <TextField fx:id="txUser" editable="false" layoutX="525.0" layoutY="19.0" prefHeight="25.0" prefWidth="125.0" />
-      <Button fx:id="btAgenda" layoutX="242.0" layoutY="438.0" mnemonicParsing="false" onAction="#visualizarConsultas" prefHeight="39.0" prefWidth="180.0" text="Agenda">
+      <Button fx:id="btAgenda" layoutX="242.0" layoutY="458.0" mnemonicParsing="false" onAction="#visualizarConsultas" prefHeight="39.0" prefWidth="180.0" text="Ver consultas">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
       <Button fx:id="btDeslogar" layoutX="14.0" layoutY="19.0" mnemonicParsing="false" onAction="#deslogarOnClicked" prefHeight="25.0" prefWidth="89.0" text="Deslogar" />
+      <Label layoutX="225.0" layoutY="67.0" text="Essa é a sua agenda:">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
