--- a/lebiton/src/main/resources/com/project/lebiton/view/MedicoConsultas.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/MedicoConsultas.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,7 +15,7 @@
             <Font size="13.0" />
          </font>
       </Button>
-      <TableView fx:id="tbConsultas" layoutX="133.0" layoutY="76.0" prefHeight="266.0" prefWidth="335.0">
+      <TableView fx:id="tbConsultas" layoutX="124.0" layoutY="107.0" prefHeight="266.0" prefWidth="335.0">
         <columns>
           <TableColumn fx:id="clCodigo" prefWidth="75.0" text="Código" />
           <TableColumn fx:id="clPaciente" prefWidth="107.0" text="Paciente" />
@@ -23,5 +24,10 @@
         </columns>
       </TableView>
       <TextField fx:id="txUser" editable="false" layoutX="437.0" layoutY="14.0" />
+      <Label layoutX="147.0" layoutY="59.0" text="Estas são as suas consultas:" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
